Adjustin transition on small screen to avoid checking

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -310,4 +310,26 @@ footer a:hover {
   #thermomixButtons {
     display: none;
   }
+
+  @keyframes slide-in-left {
+    0% {
+      transform: translate(-30px); /* Adjusted from -100px */
+      opacity: 0;
+    }
+    100% {
+      transform: translate(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slide-in-right {
+    0% {
+      transform: translate(30px); /* Adjusted from 100px */
+      opacity: 0;
+    }
+    100% {
+      transform: translate(0);
+      opacity: 1;
+    }
+  }
  }
